edit timeline.html fixed error - 신명 공약이 초록색으로 표시되는 에러 수정

--- a/app/templates/promise_list.html
+++ b/app/templates/promise_list.html
@@ -39,7 +39,7 @@
 
 <body>
 <header style="width: 100%; position: fixed; z-index: 100">
-        <a href="/">
+        <a href="timeline">
             <div style="float: left;">
                 <img src="img/timeline/back.png" alt="back" style="vertical-align: middle; margin-left: 10px">
             </div>
