공약 별 체크리스트 edit 추가.

--- a/app/templates/promise_list.html
+++ b/app/templates/promise_list.html
@@ -15,22 +15,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/js/materialize.min.js"></script>
 
 
-	<link rel="stylesheet" href="css/timeline/reset.css"> <!-- CSS reset -->
-    <link rel="stylesheet" href="css/timeline/modal.css">
-	<link rel="stylesheet" href="css/timeline/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="/css/timeline/reset.css"> <!-- CSS reset -->
+    <link rel="stylesheet" href="/css/timeline/modal.css">
+	<link rel="stylesheet" href="/css/timeline/style.css"> <!-- Resource style -->
 
-    <link rel="stylesheet" href="css/timeline/foundation.css">
-    <link rel="stylesheet" href="css/timeline/normalize.css">
+    <link rel="stylesheet" href="/css/timeline/foundation.css">
+    <link rel="stylesheet" href="/css/timeline/normalize.css">
 
-    <link rel="stylesheet" href="css/admin/materialize.css">
-    <link rel="stylesheet" href="css/admin/materialize.min.css">
+    <link rel="stylesheet" href="/css/admin/materialize.css">
+    <link rel="stylesheet" href="/css/admin/materialize.min.css">
 
 
 
-	<script src="js/timeline/modernizr.js"></script> <!-- Modernizr -->
+	<script src="/js/timeline/modernizr.js"></script> <!-- Modernizr -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/timeline/main.js"></script>
+    <script src="/js/timeline/main.js"></script>
 
 	<title>MASTER PAGE</title>
 
@@ -39,14 +39,14 @@
 
 <body>
 <header style="width: 100%; position: fixed; z-index: 100">
-        <a href="timeline">
+        <a href="/domyung/timeline">
             <div style="float: left;">
-                <img src="img/timeline/back.png" alt="back" style="vertical-align: middle; margin-left: 10px">
+                <img src="/img/timeline/back.png" alt="back" style="vertical-align: middle; margin-left: 10px">
             </div>
         </a>
-        <a href="setting">
+        <a href="/account/setting">
             <div style="float: right;">
-                <img src="img/timeline/setting.png" alt="setting" style="vertical-align: middle; margin-right: 10px">
+                <img src="/img/timeline/setting.png" alt="setting" style="vertical-align: middle; margin-right: 10px">
             </div>
         </a>
         <h1>MASTER</h1>
