--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,17 +6,13 @@
 </head>
 <body>
 --------- 그냥 로그인 ---------
-<form action="/login" method="post">
+<form action="/account/login" method="post">
     <input type="text" name="id" placeholder="userid">
     <input type="text" name="password" placeholder="password">
     <input type="submit" value="login">
 </form>
 <br><br>
 --------- Facebook 로그인 ---------
-<form action="/login_fb" method="post">
-    <input type="text" name="id" placeholder="userid">
-    <input type="text" name="password" placeholder="password">
-    <input type="submit" value="login">
-</form>
+<a href="/account/login_fb">Click Me</a>
 </body>
 </html>
