--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,11 @@
 <head>
     <title>당신을 위한 서비스. 이끌림</title>
     </head>
-<body style="background-color: #2C3E50">
+<body style="background-image: url('img/index/background.jpg');" >
     <div>
         <div style="height: 45%;">
             <div align="center">
-                <img src="img/index/logo.png" style="max-width: 100%; max-height: 100%;">
+                <img src="img/index/mainlogo.png" style="max-width: 100%; max-height: 100%;">
             </div>
         </div>
         
@@ -14,7 +14,7 @@
 
         </div>
 
-        <div id="buttons" style="height: 45%; background-color: #2C3E50">
+        <div id="buttons" style="height: 45%;">
             <div style="height: 15%">
             </div>
             <div style="width: 40%; height: inherit; float: right;">
@@ -30,11 +30,13 @@
             <div style="width: 40%; height: inherit; float: right;">
                 <a href="/select">
                 <div style="width: 91px; float: right;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
-                    <img src="img/index/start_game.png">
+                    <img src="img/index/attract.png">
                     <h3 style="text-align: center; color: #ffffff">이끌림</h3>
                 </div>
                 </a>
             </div>
+
+            <a href="/account/login"><div align="right" style="padding-right: 15%; color: white">Login</div></a>
         </div>
 
 
