complete main. fix "db data" add "put dummy data function"

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,11 @@
 <head>
     <title>당신을 위한 서비스. 이끌림</title>
     </head>
-<body style="background-color: #2C3E50">
+<body style="background: url('img/index/background.jpg') no-repeat center center fixed; --webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover">
     <div>
         <div style="height: 45%;">
             <div align="center">
-                <img src="img/index/logo.png" style="max-width: 100%; max-height: 100%;">
+                <img src="img/index/mainlogo.png" style="max-width: 100%; max-height: 100%;">
             </div>
         </div>
         
@@ -14,13 +14,13 @@
 
         </div>
 
-        <div id="buttons" style="height: 45%; background-color: #2C3E50">
+        <div id="buttons" style="height: 45%;">
             <div style="height: 15%">
             </div>
             <div style="width: 40%; height: inherit; float: right;">
                 <a href="/timeline">
                 <div style="height: 100%; width: 97px;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
-                    <img src="img/index/goto_timeline.png" >
+                    <img src="img/index/go_timeline.png" >
                     <h3 style="text-align: center; color: #ffffff;">이행도</h3>
                 </div>
                 </a>
@@ -30,7 +30,7 @@
             <div style="width: 40%; height: inherit; float: right;">
                 <a href="/select">
                 <div style="width: 91px; float: right;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
-                    <img src="img/index/start_game.png">
+                    <img src="img/index/go_select.png">
                     <h3 style="text-align: center; color: #ffffff">이끌림</h3>
                 </div>
                 </a>
