--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -124,6 +124,7 @@
 </head>
 
 <body>
+<!--
     <header style="width: 100%; position: fixed; z-index: 100">
         <a href="/">
             <div id="left">
@@ -141,6 +142,8 @@
         <h1>연표 이행도</h1>
         {% endif %}
     </header>
+    -->
+    <img src="img/timeline/"
 	<section id="cd-timeline" class="cd-container" style="margin-top: 0px">
         <!-- for title -->
         <div style="margin-top: 100px"></div>
