--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>당신을 위한 서비스. 이끌림</title>
     </head>
-<body style="background-image: url('img/index/background.jpg');" >
+<body style="background: url('img/index/background.jpg') no-repeat center center fixed; --webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover">
     <div>
         <div style="height: 45%;">
             <div align="center">
@@ -30,7 +30,7 @@
             <div style="width: 40%; height: inherit; float: right;">
                 <a href="/select">
                 <div style="width: 91px; float: right;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
-                    <img src="img/index/attract.png">
+                    <img src="img/index/go_select.png">
                     <h3 style="text-align: center; color: #ffffff">이끌림</h3>
                 </div>
                 </a>
